fix: user on mobile

--- a/public/css/users.css
+++ b/public/css/users.css
@@ -1,15 +1,13 @@
 @font-face {
     font-family: "spotify-circular-l";
-    src: url("https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Light.woff2")
-      format("woff2");
-  }
-  @font-face {
+    src: url("https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Light.woff2") format("woff2");
+}
+@font-face {
     font-family: "spotify-circular-b";
-    src: url("https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Bold.woff2")
-      format("woff2");
-  }
-html,
-body {
+    src: url("https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Bold.woff2") format("woff2");
+}
+
+html, body {
   background-color: #212121;
   margin: 0;
   padding: 0;
@@ -18,12 +16,13 @@ body {
 .users {
     border: 1px solid #ddd;
     margin: 2vh;
-    padding: 0vh 4vh;
+    padding: 2vh 4vh;
     border-radius: 2em;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     background-color: #333333;
-    height: auto;
+    flex-wrap: nowrap;
 }
 
 .user-id {
@@ -34,6 +33,7 @@ body {
 
 .user-id h2 {
     font-size: 3em;
+    margin: 0;
 }
 
 .user-detail {
@@ -44,7 +44,7 @@ body {
 .user-info {
     display: grid;
     grid-template-columns: 150px auto;
-    color: #ffffff
+    color: #ffffff;
 }
 
 .label {
@@ -58,4 +58,18 @@ body {
     font-family: "spotify-circular-l";
     text-align: left;
     font-size: 1.5em;
+}
+
+@media (max-width: 768px) { 
+    .user-id h2 {
+        font-size: 2em;
+    }
+
+    .label, .value { 
+        font-size: 0.9em;
+    }
+    
+    .user-info {
+        grid-template-columns: 120px 1fr;
+    }
 }
